--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,153 @@
 @import url("https://v1.fontapi.ir/css/Tanha");
 :root {
+  --bg-hover: #2c3e50;
+}
+
+/** toggle btn style  */
+.btn-toggle {
+  display: flex;
+  flex-flow: row wrap;
+  width: 35px;
+  height: 38%;
+  position: relative;
+  cursor: pointer;
+}
+
+.btn-toggle span {
+  width: 100%;
+  height: 3px;
+  background-color: #ecf0f1;
+  border-radius: 5px;
+}
+
+.Menu .logo {
+  display: none;
+}
+
+.Menu ul {
+  position: absolute;
+  background-color: #2f3640;
+  right: 0;
+  width: 95%;
+  display: none;
+  transition: 1s ease-in-out;
+}
+
+.Menu ul a {
+  padding-right: 5px;
+}
+
+.Menu ul a:hover {
+  background-color: var(--bg-hover);
+}
+
+.Menu ul a i {
+  font-size: 1rem;
+  margin-left: 8px;
+}
+
+.Menu li {
+  position: relative;
+  flex-grow: 1;
+}
+
+.Menu li:hover ul {
+  display: block;
+  transition: 1s ease-in-out;
+}
+
+.Menu a {
+  display: block;
+  color: #ecf0f1;
+  padding: 10px 0;
+  transition: 0.7s ease-in-out;
+}
+
+.Menu a:hover {
+  color: #48dbfb;
+}
+
+.Menu a i {
+  margin-left: 5px;
+  vertical-align: middle;
+  font-size: 1.2rem;
+}
+
+:root {
+  --bg-hover: #2c3e50;
+}
+
+/** toggle btn style  */
+.btn-toggle {
+  display: flex;
+  flex-flow: row wrap;
+  width: 35px;
+  height: 38%;
+  position: relative;
+  cursor: pointer;
+}
+
+.btn-toggle span {
+  width: 100%;
+  height: 3px;
+  background-color: #ecf0f1;
+  border-radius: 5px;
+}
+
+.Menu .logo {
+  display: none;
+}
+
+.Menu ul {
+  position: absolute;
+  background-color: #2f3640;
+  right: 0;
+  width: 95%;
+  display: none;
+  transition: 1s ease-in-out;
+}
+
+.Menu ul a {
+  padding-right: 5px;
+}
+
+.Menu ul a:hover {
+  background-color: var(--bg-hover);
+}
+
+.Menu ul a i {
+  font-size: 1rem;
+  margin-left: 8px;
+}
+
+.Menu li {
+  position: relative;
+  flex-grow: 1;
+}
+
+.Menu li:hover ul {
+  display: block;
+  transition: 1s ease-in-out;
+}
+
+.Menu a {
+  display: block;
+  color: #ecf0f1;
+  padding: 10px 0;
+  transition: 0.7s ease-in-out;
+}
+
+.Menu a:hover {
+  color: #48dbfb;
+}
+
+.Menu a i {
+  margin-left: 5px;
+  vertical-align: middle;
+  font-size: 1.2rem;
+}
+
+:root {
   --font-family: "Tanha", sans-serif;
   --body-font: 1rem;
 }
@@ -26,5 +174,34 @@ html {
 body {
   font-family: var(--font-family);
   font-size: var(--font-family);
+}
+
+.nav-container, .Menu {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/**  container initial style */
+.nav-container {
+  width: 100%;
+  height: 65px;
+  background-color: #2f3640;
+}
+
+.toggle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 10%;
+  height: 100%;
+}
+
+.Menu {
+  flex-grow: 2;
+  flex-basis: 90%;
+  text-align: right;
 }
 /*# sourceMappingURL=style.css.map */
