--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,35 @@
   --bg-hover: #2c3e50;
 }
 
-/** toggle btn style  */
-.btn-toggle {
+.nav-container, .Menu {
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/**  container initial style */
+.nav-container {
+  width: 100%;
+  height: 65px;
+  background-color: #2f3640;
+}
+
+/** toggle btn style  */
+.toggle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 10%;
+  height: 100%;
+}
+
+.btn-toggle {
+  display: none;
   flex-flow: row wrap;
   width: 35px;
-  height: 38%;
+  height: 40%;
   position: relative;
   cursor: pointer;
 }
@@ -18,6 +41,12 @@
   height: 3px;
   background-color: #ecf0f1;
   border-radius: 5px;
+}
+
+.Menu {
+  flex-grow: 2;
+  flex-basis: 90%;
+  text-align: right;
 }
 
 .Menu .logo {
@@ -51,13 +80,10 @@
   flex-grow: 1;
 }
 
-.Menu li:hover ul {
-  display: block;
-  transition: 1s ease-in-out;
-}
-
 .Menu a {
   display: block;
+  /** use .arrow-down inside <a> tag width position relative and set position absolute for arrow **/
+  position: relative;
   color: #ecf0f1;
   padding: 10px 0;
   transition: 0.7s ease-in-out;
@@ -70,19 +96,92 @@
 .Menu a i {
   margin-left: 5px;
   vertical-align: middle;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+}
+
+.arrow-down {
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 100px;
+  top: 20px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 7px solid #ecf0f1;
+}
+
+@media screen and (max-width: 768px) {
+  .toggle {
+    justify-content: flex-end;
+    padding-right: 10px;
+  }
+  .btn-toggle {
+    height: 42%;
+    display: flex;
+  }
+  .Menu {
+    position: fixed;
+    right: 0;
+    top: 65px;
+    width: 320px;
+    height: 100%;
+    background-color: inherit;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    transition: right 0.8s ease-in-out;
+    overflow-y: auto;
+  }
+  .Menu .logo {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+  }
+  .Menu .logo img {
+    border-radius: 50%;
+    width: 35%;
+    height: 100%;
+    padding: 5px;
+  }
 }
 
 :root {
   --bg-hover: #2c3e50;
 }
 
-/** toggle btn style  */
-.btn-toggle {
+.nav-container, .Menu {
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/**  container initial style */
+.nav-container {
+  width: 100%;
+  height: 65px;
+  background-color: #2f3640;
+}
+
+/** toggle btn style  */
+.toggle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 10%;
+  height: 100%;
+}
+
+.btn-toggle {
+  display: none;
   flex-flow: row wrap;
   width: 35px;
-  height: 38%;
+  height: 40%;
   position: relative;
   cursor: pointer;
 }
@@ -92,6 +191,12 @@
   height: 3px;
   background-color: #ecf0f1;
   border-radius: 5px;
+}
+
+.Menu {
+  flex-grow: 2;
+  flex-basis: 90%;
+  text-align: right;
 }
 
 .Menu .logo {
@@ -125,13 +230,10 @@
   flex-grow: 1;
 }
 
-.Menu li:hover ul {
-  display: block;
-  transition: 1s ease-in-out;
-}
-
 .Menu a {
   display: block;
+  /** use .arrow-down inside <a> tag width position relative and set position absolute for arrow **/
+  position: relative;
   color: #ecf0f1;
   padding: 10px 0;
   transition: 0.7s ease-in-out;
@@ -144,7 +246,57 @@
 .Menu a i {
   margin-left: 5px;
   vertical-align: middle;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+}
+
+.arrow-down {
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 100px;
+  top: 20px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 7px solid #ecf0f1;
+}
+
+@media screen and (max-width: 768px) {
+  .toggle {
+    justify-content: flex-end;
+    padding-right: 10px;
+  }
+  .btn-toggle {
+    height: 42%;
+    display: flex;
+  }
+  .Menu {
+    position: fixed;
+    right: 0;
+    top: 65px;
+    width: 320px;
+    height: 100%;
+    background-color: inherit;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    transition: right 0.8s ease-in-out;
+    overflow-y: auto;
+  }
+  .Menu .logo {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+  }
+  .Menu .logo img {
+    border-radius: 50%;
+    width: 35%;
+    height: 100%;
+    padding: 5px;
+  }
 }
 
 :root {
@@ -174,34 +326,5 @@ html {
 body {
   font-family: var(--font-family);
   font-size: var(--font-family);
-}
-
-.nav-container, .Menu {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-}
-
-/**  container initial style */
-.nav-container {
-  width: 100%;
-  height: 65px;
-  background-color: #2f3640;
-}
-
-.toggle {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex: 1 0 10%;
-  height: 100%;
-}
-
-.Menu {
-  flex-grow: 2;
-  flex-basis: 90%;
-  text-align: right;
 }
 /*# sourceMappingURL=style.css.map */
