--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -110,22 +110,8 @@
         display: flex;
     }
     .Menu {
-        .logo {
-            width: 100%;
-            height: 100px;
-            @include flex(center, center);
-            padding: 5px;
-            img {
-                border-radius: 50%;
-                // border: 5px solid rgb(23, 214, 228);
-                width: 35%;
-                height: 100%;
-                padding: 5px;
-                // box-shadow: 1px 1px 3px #000, -1px -1px 3px rgba(0, 0, 0, 0.966);
-            }
-        }
         position: fixed;
-        right: 0;
+        right: -320px;
         top: 65px;
         @include coordin(320px, 100%);
         background-color: inherit;
@@ -133,6 +119,46 @@
         align-items: flex-end;
         justify-content: flex-start;
         transition: right 0.8s ease-in-out;
+        padding-top: 20px;
         overflow-y: auto;
+        li {
+            width: 100%;
+            margin: 10px 0;
+            flex-grow: 0;
+            a {
+                padding-right: 8px;
+                &:hover {
+                    background-color: var(--bg-hover);
+                    transition: 0.9s ease-in-out;
+                }
+            }
+        }
     }
+    .arrow-down {
+        left: 10px;
+    }
+}
+
+.activeToggle {
+    span {
+        position: absolute;
+        &:nth-child(1) {
+            top: -4px;
+            transform-origin: left center;
+            transform: rotate(45deg);
+        }
+        &:nth-child(2) {
+            transform-origin: left center;
+            background: transparent;
+        }
+        &:nth-child(3) {
+            top: -18px;
+            transform-origin: left center;
+            transform: rotate(-45deg);
+        }
+    }
+}
+
+.activeMenu {
+    right: 0;
 }
