--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
   height: 40%;
   position: relative;
   cursor: pointer;
+  opacity: 1;
 }
 
 .btn-toggle span {
@@ -41,6 +42,7 @@
   height: 3px;
   background-color: #ecf0f1;
   border-radius: 5px;
+  transition: 0.9s ease-in-out;
 }
 
 .Menu {
@@ -58,7 +60,6 @@
   background-color: #2f3640;
   right: 0;
   width: 95%;
-  display: none;
   transition: 1s ease-in-out;
 }
 
@@ -135,7 +136,6 @@
   }
   .Menu li {
     width: 100%;
-    margin: 10px 0;
     flex-grow: 0;
   }
   .Menu li a {
@@ -145,13 +145,21 @@
     background-color: var(--bg-hover);
     transition: 0.9s ease-in-out;
   }
+  .Menu ul {
+    position: static;
+    width: 100%;
+    height: auto;
+    background-color: #2c3e50;
+  }
   .arrow-down {
     left: 10px;
   }
 }
 
+/**  active toggle class  in the small device*/
 .activeToggle span {
   position: absolute;
+  transition: 0.9s ease-in-out;
 }
 
 .activeToggle span:nth-child(1) {
@@ -162,15 +170,18 @@
 
 .activeToggle span:nth-child(2) {
   transform-origin: left center;
-  background: transparent;
+  width: 0;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
 }
 
 .activeToggle span:nth-child(3) {
-  top: -18px;
+  top: 20px;
   transform-origin: left center;
   transform: rotate(-45deg);
 }
 
+/** class active Menu in  the small screen */
 .activeMenu {
   right: 0;
 }
@@ -210,6 +221,7 @@
   height: 40%;
   position: relative;
   cursor: pointer;
+  opacity: 1;
 }
 
 .btn-toggle span {
@@ -217,6 +229,7 @@
   height: 3px;
   background-color: #ecf0f1;
   border-radius: 5px;
+  transition: 0.9s ease-in-out;
 }
 
 .Menu {
@@ -234,7 +247,6 @@
   background-color: #2f3640;
   right: 0;
   width: 95%;
-  display: none;
   transition: 1s ease-in-out;
 }
 
@@ -311,7 +323,6 @@
   }
   .Menu li {
     width: 100%;
-    margin: 10px 0;
     flex-grow: 0;
   }
   .Menu li a {
@@ -321,13 +332,21 @@
     background-color: var(--bg-hover);
     transition: 0.9s ease-in-out;
   }
+  .Menu ul {
+    position: static;
+    width: 100%;
+    height: auto;
+    background-color: #2c3e50;
+  }
   .arrow-down {
     left: 10px;
   }
 }
 
+/**  active toggle class  in the small device*/
 .activeToggle span {
   position: absolute;
+  transition: 0.9s ease-in-out;
 }
 
 .activeToggle span:nth-child(1) {
@@ -338,15 +357,18 @@
 
 .activeToggle span:nth-child(2) {
   transform-origin: left center;
-  background: transparent;
+  width: 0;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
 }
 
 .activeToggle span:nth-child(3) {
-  top: -18px;
+  top: 20px;
   transform-origin: left center;
   transform: rotate(-45deg);
 }
 
+/** class active Menu in  the small screen */
 .activeMenu {
   right: 0;
 }
