--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -33,12 +33,14 @@
     height: 40%;
     position: relative;
     cursor: pointer;
+    opacity: 1;
     // display: none;
     span {
         width: 100%;
         height: 3px;
         background-color: map-get($map: $color, $key: Clouds);
         border-radius: 5px;
+        transition: 0.9s ease-in-out;
     }
 }
 
@@ -55,7 +57,6 @@
         background-color: map-get($map: $color, $key: Asphalt);
         right: 0;
         width: 95%;
-        display: none;
         transition: 1s ease-in-out;
         a {
             padding-right: 5px;
@@ -123,7 +124,6 @@
         overflow-y: auto;
         li {
             width: 100%;
-            margin: 10px 0;
             flex-grow: 0;
             a {
                 padding-right: 8px;
@@ -133,15 +133,25 @@
                 }
             }
         }
+        ul {
+            position: static;
+            width: 100%;
+            height: auto;
+            background-color: #2c3e50;
+        }
     }
     .arrow-down {
         left: 10px;
     }
 }
 
+
+/**  active toggle class  in the small device*/
+
 .activeToggle {
     span {
         position: absolute;
+        transition: 0.9s ease-in-out;
         &:nth-child(1) {
             top: -4px;
             transform-origin: left center;
@@ -149,15 +159,21 @@
         }
         &:nth-child(2) {
             transform-origin: left center;
-            background: transparent;
+            // opacity: 0;
+            width: 0;
+            background-color: transparent;
+            transition: 0.3s ease-in-out;
         }
         &:nth-child(3) {
-            top: -18px;
+            top: 20px;
             transform-origin: left center;
             transform: rotate(-45deg);
         }
     }
 }
+
+
+/** class active Menu in  the small screen */
 
 .activeMenu {
     right: 0;
