edit style and add new script

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,32 @@
   transition: 0.9s ease-in-out;
 }
 
+/**  active toggle class  in the small device*/
+.activeToggle span {
+  position: absolute;
+  transition: 0.9s ease-in-out;
+}
+
+.activeToggle span:nth-child(1) {
+  top: -4px;
+  transform-origin: left center;
+  transform: rotate(45deg);
+}
+
+.activeToggle span:nth-child(2) {
+  transform-origin: left center;
+  width: 0;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
+}
+
+.activeToggle span:nth-child(3) {
+  top: 20px;
+  transform-origin: left center;
+  transform: rotate(-45deg);
+}
+
+/** main menu */
 .Menu {
   flex-grow: 2;
   flex-basis: 90%;
@@ -100,6 +126,7 @@
   font-size: 1.1rem;
 }
 
+/** arrow beside dropdown menu */
 .arrow-down {
   width: 0;
   height: 0;
@@ -109,6 +136,12 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 7px solid #ecf0f1;
+  transition: 0.4s ease-in-out;
+}
+
+.arrow-hover {
+  transform: rotate(180deg);
+  transition: 0.4s ease-in-out;
 }
 
 @media screen and (max-width: 768px) {
@@ -154,31 +187,6 @@
   .arrow-down {
     left: 10px;
   }
-}
-
-/**  active toggle class  in the small device*/
-.activeToggle span {
-  position: absolute;
-  transition: 0.9s ease-in-out;
-}
-
-.activeToggle span:nth-child(1) {
-  top: -4px;
-  transform-origin: left center;
-  transform: rotate(45deg);
-}
-
-.activeToggle span:nth-child(2) {
-  transform-origin: left center;
-  width: 0;
-  background-color: transparent;
-  transition: 0.3s ease-in-out;
-}
-
-.activeToggle span:nth-child(3) {
-  top: 20px;
-  transform-origin: left center;
-  transform: rotate(-45deg);
 }
 
 /** class active Menu in  the small screen */
@@ -232,6 +240,32 @@
   transition: 0.9s ease-in-out;
 }
 
+/**  active toggle class  in the small device*/
+.activeToggle span {
+  position: absolute;
+  transition: 0.9s ease-in-out;
+}
+
+.activeToggle span:nth-child(1) {
+  top: -4px;
+  transform-origin: left center;
+  transform: rotate(45deg);
+}
+
+.activeToggle span:nth-child(2) {
+  transform-origin: left center;
+  width: 0;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
+}
+
+.activeToggle span:nth-child(3) {
+  top: 20px;
+  transform-origin: left center;
+  transform: rotate(-45deg);
+}
+
+/** main menu */
 .Menu {
   flex-grow: 2;
   flex-basis: 90%;
@@ -287,6 +321,7 @@
   font-size: 1.1rem;
 }
 
+/** arrow beside dropdown menu */
 .arrow-down {
   width: 0;
   height: 0;
@@ -296,6 +331,12 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 7px solid #ecf0f1;
+  transition: 0.4s ease-in-out;
+}
+
+.arrow-hover {
+  transform: rotate(180deg);
+  transition: 0.4s ease-in-out;
 }
 
 @media screen and (max-width: 768px) {
@@ -341,31 +382,6 @@
   .arrow-down {
     left: 10px;
   }
-}
-
-/**  active toggle class  in the small device*/
-.activeToggle span {
-  position: absolute;
-  transition: 0.9s ease-in-out;
-}
-
-.activeToggle span:nth-child(1) {
-  top: -4px;
-  transform-origin: left center;
-  transform: rotate(45deg);
-}
-
-.activeToggle span:nth-child(2) {
-  transform-origin: left center;
-  width: 0;
-  background-color: transparent;
-  transition: 0.3s ease-in-out;
-}
-
-.activeToggle span:nth-child(3) {
-  top: 20px;
-  transform-origin: left center;
-  transform: rotate(-45deg);
 }
 
 /** class active Menu in  the small screen */
